integration tests incorporated and loading states and error handling added to the frontend for better user experience.